# environmentNode

libs/: .gitignore  simple_buffer.c  simple_buffer.h
projects/: .project
projects/myTests/: .cproject  .project
projects/myTests/src/: main.c
projects/transferAdcToUart/: .cproject  .mxproject  .project  transferAdcToUart.elf.launch  transferAdcToUart.ioc
projects/transferAdcToUart/Src/: adc.c  main.c
projects/transferAdcToUart/TrueSTUDIO/transferAdcToUart/: .cproject  .project  transferAdcToUart.elf.launch
tests/myGtestsMain/: .cproject  .project
tests/myGtestsMain/src/: gtest_main.cpp  main.cpp  simpre_buffer_test.cpp
tests/testWithCmake/: CMakeLists.txt
tests/testWithCmake/gtest/: gtest-all.cc  gtest.h
tests/testWithCmake/src/: basic_check.cpp  main.cpp
